[gd_scene load_steps=17 format=3 uid="uid://bwsnxx2yxc7n8"]

[ext_resource type="Script" uid="uid://do8lmc55ji872" path="res://scenes/player/player_hud.gd" id="1_xiwgm"]
[ext_resource type="Texture2D" uid="uid://dxuyu0gswc0ju" path="res://assets/ui_assets/FantasyUI/Default/Border/panel-border-027.png" id="2_jlg7l"]
[ext_resource type="Texture2D" uid="uid://npnj46ktb1aq" path="res://assets/ui_assets/Retro Inventory/Original/Health_01.png" id="2_lbnyo"]
[ext_resource type="Texture2D" uid="uid://u34rmc54dqwj" path="res://assets/ui_assets/Retro Inventory/Original/Settings_Bar02.png" id="3_4dwxf"]
[ext_resource type="Texture2D" uid="uid://cbkr4085xyoev" path="res://assets/ui_assets/Retro Inventory/Original/Hearts_Red_1.png" id="3_42jgg"]
[ext_resource type="Texture2D" uid="uid://bcdr3ggi8aye3" path="res://assets/ui_assets/FantasyUI/Default/Border/panel-border-027-colored.png" id="3_rdcm5"]
[ext_resource type="Texture2D" uid="uid://w10rwppni2wf" path="res://assets/ui_assets/Retro Inventory/Original/07.png" id="4_w5n10"]
[ext_resource type="Texture2D" uid="uid://crmiorew6d0uk" path="res://assets/ui_assets/Retro Inventory/Original/Health_01_Bar01.png" id="4_w64pa"]
[ext_resource type="Texture2D" uid="uid://bxa68aepj2vyt" path="res://assets/ui_assets/Retro Inventory/Original/Settings.png" id="5_w64pa"]
[ext_resource type="Texture2D" uid="uid://cmm0ccqnfntd3" path="res://assets/ui_assets/Retro Inventory/Original/Health_03.png" id="6_ajqse"]
[ext_resource type="Texture2D" uid="uid://dc3nahljmqdkx" path="res://assets/ui_assets/Retro Inventory/Original/Health_03_Bar02.png" id="6_m28le"]
[ext_resource type="Texture2D" uid="uid://bl2qrlcxrq13y" path="res://assets/ui_assets/Retro Inventory/Original/Health_03_Bar03.png" id="7_yuo71"]
[ext_resource type="Texture2D" uid="uid://bbfi7g1ljjbj1" path="res://assets/ui_assets/Retro Inventory/Original/Inventory_9Slices.png" id="8_yuo71"]
[ext_resource type="Texture2D" uid="uid://8guw33ddatrg" path="res://assets/ui_assets/Retro Inventory/Original/Inventory_Slot_8.png" id="9_rj8fd"]
[ext_resource type="FontFile" uid="uid://dx64cq2hbd78j" path="res://assets/fonts/ROMANUS.otf" id="13_7fd0g"]

[sub_resource type="LabelSettings" id="LabelSettings_kmx6k"]
font = ExtResource("13_7fd0g")
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[node name="PlayerHud" type="Control"]
layout_mode = 3
anchor_right = 0.333
anchor_bottom = 0.333
offset_right = -383.616
offset_bottom = -216.0
script = ExtResource("1_xiwgm")

[node name="TextureRect" type="ColorRect" parent="."]
show_behind_parent = true
z_index = -100
custom_minimum_size = Vector2(384, 216)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.333
anchor_bottom = 0.333
offset_right = 384.0
offset_bottom = 216.0
mouse_filter = 1
color = Color(0.0509804, 0.0509804, 0.0509804, 0.458824)

[node name="BossBar" type="TextureProgressBar" parent="."]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 55.0
offset_top = 8.0
offset_right = 327.0
offset_bottom = 22.0
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 14
stretch_margin_top = 9
stretch_margin_right = 14
stretch_margin_bottom = 9
texture_under = ExtResource("2_jlg7l")
texture_progress = ExtResource("3_rdcm5")
tint_progress = Color(1, 0, 0, 1)

[node name="RollMeter" type="TextureProgressBar" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = 43.0
offset_right = 25.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5707964
value = 100.0
texture_under = ExtResource("5_w64pa")
texture_progress = ExtResource("3_4dwxf")
texture_progress_offset = Vector2(16, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(168, 97)
scale = Vector2(-1, 1)
texture = ExtResource("4_w5n10")
hframes = 10
region_enabled = true
region_rect = Rect2(0, 16.1, 160, 16)

[node name="PlayerMeters" type="Control" parent="."]
anchors_preset = 0
offset_left = 4.0
offset_top = 162.0
offset_right = 76.0
offset_bottom = 212.0
size_flags_horizontal = 3

[node name="HealthMeter" type="TextureProgressBar" parent="PlayerMeters"]
layout_mode = 0
offset_top = 34.0
offset_right = 64.0
offset_bottom = 50.0
value = 100.0
texture_under = ExtResource("2_lbnyo")
texture_over = ExtResource("3_42jgg")
texture_progress = ExtResource("4_w64pa")
texture_progress_offset = Vector2(16, 0)

[node name="StaminaMeter" type="TextureProgressBar" parent="PlayerMeters"]
layout_mode = 0
offset_left = 5.0
offset_top = 15.0
offset_right = 69.0
offset_bottom = 31.0
size_flags_horizontal = 3
value = 100.0
texture_under = ExtResource("6_ajqse")
texture_progress = ExtResource("6_m28le")
texture_progress_offset = Vector2(11, 0)

[node name="ManaMeter" type="TextureProgressBar" parent="PlayerMeters"]
layout_mode = 0
offset_left = 5.0
offset_top = -3.0
offset_right = 69.0
offset_bottom = 13.0
size_flags_horizontal = 3
value = 100.0
texture_under = ExtResource("6_ajqse")
texture_progress = ExtResource("7_yuo71")
texture_progress_offset = Vector2(11, 0)

[node name="AbilityControl" type="Control" parent="."]
anchors_preset = 0
offset_left = -0.39199972
offset_top = -42.0
offset_right = -0.39199972
offset_bottom = -4.0

[node name="AbilitySpot" type="TextureProgressBar" parent="AbilityControl"]
texture_filter = 1
layout_mode = 0
offset_left = 343.392
offset_top = 217.0
offset_right = 375.392
offset_bottom = 249.0
size_flags_horizontal = 3
value = 100.0
fill_mode = 5
texture_under = ExtResource("8_yuo71")
texture_progress = ExtResource("9_rj8fd")

[node name="Item Description" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.004
anchor_top = 0.017
anchor_right = 0.22000001
anchor_bottom = 0.22800002
offset_left = 1.6080003
offset_top = 15.983999
offset_right = 0.5599823
offset_bottom = 0.2559967
label_settings = SubResource("LabelSettings_kmx6k")

[node name="Stairs" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.004
anchor_top = 0.017
anchor_right = 0.22000001
anchor_bottom = 0.22800002
offset_left = 158.608
offset_top = 7.9839993
offset_right = 288.56
offset_bottom = -13.744003
text = "Stairs Have Opened"
label_settings = SubResource("LabelSettings_kmx6k")
horizontal_alignment = 2
